<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dashboard">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="18dp"
        tools:ignore="UselessParent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <!-- Header -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="8dp">

        <!-- Coin and settings -->
        <ImageView
            android:id="@+id/image"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/img_1" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/mary376"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="5dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/img_2" />

        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="@string/_34"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/img_3" />

    </LinearLayout>

    <!-- Budget Status Card -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="12dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/budget_status_background">

            <TextView
                android:id="@+id/budget_status_title"
                android:layout_width="238dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/budget_status"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/budget_status_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/budget_status_title"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/good"
                android:textAlignment="center"
                android:textColor="#31FFD5"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="358dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/you_ve_saved_10_of_your_budget_this_month"
                android:textColor="#FFFFFF" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="25dp"
                android:layout_marginBottom="38dp"
                app:srcCompat="@drawable/img_4" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <!-- Budget Summary -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="172dp"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:text="@string/left_to_spend"
                    android:textColor="#888888"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:text="@string/r4388_79"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="178dp"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:text="@string/monthly_budget"
                    android:textColor="#888888"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="166dp"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:text="@string/r12_500_00"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <!-- Food Category Highlight -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:text="@string/you_mainly_spend_money_on_food"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="14sp" />

    <!-- More Actions -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/more_actions"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold" />



    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:columnCount="3">

        <!-- Categories -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:gravity="center"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:srcCompat="@drawable/img_8" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/categories"
                android:textSize="12sp"
                android:paddingBottom="20dp"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <!-- Set Goal -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:gravity="center"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:srcCompat="@drawable/img_9" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_goal"
                android:textSize="12sp"
                android:paddingBottom="20dp"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <!-- Wealth Wrapped -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:gravity="center"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:srcCompat="@drawable/img_5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/breakdown"
                android:textSize="12sp"
                android:paddingBottom="20dp"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <!-- All Expenses -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:gravity="center"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:srcCompat="@drawable/img_10" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expense_history"
                android:textSize="12sp"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <!-- User -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:orientation="vertical"
            android:gravity="center"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/imageView15"
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:srcCompat="@drawable/img_6" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user"
                android:textSize="12sp"
                android:textColor="@android:color/black" />
        </LinearLayout>
    </GridLayout>

    <!-- Repeat for each action -->

        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="77dp"
                android:layout_height="80dp"
                android:layout_row="0"
                android:layout_column="0"
                android:gravity="center"
                app:srcCompat="@drawable/img_7" />

            <TextView
                android:id="@+id/tv_add_expense"
                android:layout_width="128dp"
                android:layout_height="27dp"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_marginTop="0dp"
                android:gravity="center"
                android:text="@string/add_expense"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

    </RelativeLayout>
    </LinearLayout>

    </ScrollView>

</FrameLayout>