<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_background"
    tools:context=".WelcomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:src="@drawable/img" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/archivo_black"
            android:text="@string/master_your_money_own_your_future"
            android:textColor="#011F62"
            android:textSize="34sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/archivo_narrow"
            android:text="@string/track_save_and_grow_with_wealthwhiz"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/rounded_corners"
            android:backgroundTint="@color/material_dynamic_primary10"
            android:text="@string/sign_in"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_corners"
            android:backgroundTint="@color/material_dynamic_neutral50"
            android:text="@string/sign_up"
            android:textColor="@color/white" />

    </LinearLayout>
</RelativeLayout>
